# qBittorrent-block-xunlei-rust

./: .env  Cargo.toml
.github/workflows/: rust_build.yml
src/handler/: res.rs
src/model/: config.rs  mod.rs  user.rs
src/req/: mod.rs  qb.rs
