[package]
name = "qBittorrent-block-xunlei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ftlog = "0.2.13"
log = "0.4.21"
regex = "1.10.4"
reqwest = { version = "0.12.4",features = ["json"] }
serde = { version = "1.0.200", features = ["derive","serde_derive"] }
tokio = { version = "1.37.0", features = ["time", "rt", "rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
serde_json = "1.0.116"

[[bin]]
name = "qbt-block-xunlei"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'